--- a/templates/home.html
+++ b/templates/home.html
@@ -165,6 +165,10 @@
                                     <td>{{ abastecer.cantidad }}</td>
                                     <td><span class="status-btn close-btn">Reabastecer</span></td>
                                 </tr>
+                            {% empty %}
+                                <tr>
+                                <td colspan="3">No existen insumos para reabastecer</td>
+                                </tr>
                             {% endfor %}
 
 
