--- a/templates/home.html
+++ b/templates/home.html
@@ -107,7 +107,7 @@
         </div>
         <!-- End Row -->
         <div class="row">
-            <div class="col-lg-7">
+            <div class="col-lg-6">
                 <div class="card-style mb-30">
                     <div class="title d-flex flex-wrap justify-content-between">
                         <div class="left">
@@ -129,19 +129,12 @@
                 </div>
             </div>
             <!-- End Col -->
-            <div class="col-lg-5">
+            <div class="col-lg-6">
                 <div class="card-style mb-30">
-                    <div
-                            class="
-                    title
-                    d-flex
-                    flex-wrap
-                    align-items-center
-                    justify-content-between
-                  "
-                    >
+                    <div class="title d-flex flex-wrap align-items-center justify-content-between " >
                         <div class="left">
                             <h6 class="text-medium mb-30">Indicadores de Abastecimiento</h6>
+
                         </div>
                         <div class="right">
 
