--- a/templates/administracion/usuario/view.html
+++ b/templates/administracion/usuario/view.html
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="card-style mb-30">
-                    <h6 class="mb-10">Módulos</h6>
+                    <h6 class="mb-10">Usuarios</h6>
                     <p class="text-sm mb-20">
 
                     </p>
