--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,10 @@
                             </button>
                         </div>
                         <div class="header-search d-none d-md-flex">
-
+                            <form id="if_form_buscar" method="GET" autocomplete="off">
+                                <input type="text" id="id_buscar" name="buscar"  placeholder="buscar...">
+                                <button><i class="lni lni-search-alt"></i></button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -136,6 +139,29 @@
             {% block modals %}
 
             {% endblock %}
+
+
+            <div class="modal fade static" id="formularioModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                 aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg">
+                    <div class="modal-content card-style">
+                        <div class="modal-header px-0 border-0">
+                            <h5 class="text-bold">{{ titulo }}</h5>
+                            <button class="border-0 bg-transparent h1" data-bs-dismiss="modal">
+                                <i class="lni lni-cross-circle"></i>
+                            </button>
+                        </div>
+                        <div class="modal-body px-0">
+
+                            <div class="content mb-30">
+
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
         <!-- end container -->
