--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -48,7 +48,7 @@
                         <form class="row g-3 needs-validation" novalidate method="post" action="{% url 'login' %}">
                             {% csrf_token %}
                             <div class="col-12">
-                                <label for="username" class="form-label">Username</label>
+                                <label for="username" class="form-label">Email</label>
                                 <div class="input-group has-validation">
                                     <span class="input-group-text" id="inputGroupPrepend">@</span>
                                     <input type="text" name="username" class="form-control" id="id_username" required>
