--- a/templates/administracion/acceso_modulo/edit_acceso_modulo.html
+++ b/templates/administracion/acceso_modulo/edit_acceso_modulo.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Personas{% endblock %}
+{% block title %}Administración{% endblock %}
 
 {% block content %}
     <!-- ========== title-wrapper start ========== -->
@@ -7,7 +7,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <div class="title d-flex align-items-center flex-wrap mb-30">
-                    <h2 class="mr-40">Formulario Persona</h2>
+                    <h2 class="mr-40"></h2>
 
                 </div>
             </div>
@@ -25,11 +25,11 @@
                             </li>
 
                             <li class="breadcrumb-item ">
-                                <a href="{% url 'administracion:view_persona' %}">Persona</a>
+                                <a href="{% url 'administracion:view_acceso_modulo' %}">Grupo acceso módulo</a>
                             </li>
 
                             <li class="breadcrumb-item active" aria-current="page">
-                                add
+                                edit
                             </li>
 
                         </ol>
@@ -44,13 +44,24 @@
 
     <!-- ========== tables-wrapper start ========== -->
     <div class="container">
+
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
-                <form action="{% url 'administracion:add_persona' %}" method="POST">
-                    {% include "form_snippet.html" %}
+                <div class="">
+                    <div class="title d-flex align-items-center flex-wrap mb-30">
+                        <h2 class="mr-40">Formulario</h2>
 
-                </form>
+                    </div>
+                    <form action="{% url 'administracion:edit_acceso_modulo' acceso_modulo.pk %}" method="POST"
+                          enctype="multipart/form-data">
+                        {% include "form_snippet.html" %}
+
+                    </form>
+                </div>
+
+
             </div>
+
 
         </div>
         <!-- end row -->
