--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,6 @@
 {% block title %}Home{% endblock %}
 {% block extra_head %}
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 {% endblock %}
 {% block content %}
     <!-- ========== title-wrapper start ========== -->
@@ -28,8 +27,9 @@
             </div>
             <!-- end col -->
         </div>
-        <!-- end row -->
 
+        {% if user.super_user or user.is_Staff %}
+            <!-- end row -->
         <div class="row">
 
             <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -174,6 +174,7 @@
             <!-- End Col -->
         </div>
 
+        {% endif %}
 
     </div>
 {% endblock %}
