--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
             <!-- end col -->
         </div>
 
-        {% if user.super_user or user.is_Staff %}
+        {% if user.super_user or user.is_staff %}
             <!-- end row -->
         <div class="row">
 
